# routes/index.js
@@ -1,8 +1,8 @@
 const router = require('express').Router();
 const dotenv = require('dotenv'); // Using dotenv to get our mongodb uri
 dotenv.config();
-//const { auth } = require('express-openid-connect');
-//const { requiresAuth } = require('express-openid-connect');
+const { auth } = require('express-openid-connect');
+const { requiresAuth } = require('express-openid-connect');
 
 const config = {
   authRequired: false,
@@ -13,14 +13,16 @@ const config = {
   issuerBaseURL: process.env.ISSUER_BASE_URL,
 };
 
-//router.use(auth(config));
+router.use(auth(config));
 
-//router.get('/', (req, res) => {
-  //res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out');
-//});
-//router.get('/profile', requiresAuth(), (req, res) => {
-  //res.send(JSON.stringify(req.oidc.user));
-//});
+router.get('/', (req, res) => {
+  // #swagger.tags= ['Auth']
+  res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out');
+});
+router.get('/profile', requiresAuth(), (req, res) => {
+  // #swagger.tags= ['Auth']
+  res.send(JSON.stringify(req.oidc.user));
+});
 router.use('/', require('./swagger'));
 router.use('/users', require('./users'));
 router.use('/orders', require('./orders'));
